--- a/client-test.yml
+++ b/client-test.yml
@@ -4,6 +4,6 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:2020/eureka
+      defaultZone: http://127.0.0.1:2020/eureka
   instance:
     hostname: client
